<resources>
    <string name="app_name">SnipTools</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SnipTools</string>
    <string name="nav_header_subtitle">I hope you\'re happy now</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="home_description">SnapTools is a project aimed to provide Snapchat modifications using the Xposed Framework.
        We provide new functionality and features to the popular Snapchat application, in a seamless and modular way.
        \n\nWe use a cloud based download system to allow for straightforward updates as well as support for hotswapping
        of supported Snapchat versions without the need of a system reboot.</string>
    <string name="home_authors">jaqxues (Jacques)</string>

    <string name="menu_home">Home</string>
    <string name="menu_packs">Pack Manager</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_support">Support</string>
    <string name="menu_faqs">FAQs</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_shop">Shop/Donations</string>
    <string name="menu_features">Features</string>
    <string name="menu_legal">Legal</string>
    <string name="menu_bugs">Known Bugs</string>
    <string name="menu_pack_history">Pack History</string>

    <string name="tab_pack_selector_title">Pack Selector</string>
    <string name="tab_pack_downloader_title">Pack Downloader</string>
    <string name="footer_app_version">App Version</string>
    <string name="footer_snapchat_version">Snapchat Version</string>
    <string name="footer_last_checked">Last Checked</string>

    <string name="placeholder">Placeholder</string>

    <!-- Content Descriptions -->
    <string name="cdesc_sniptools_logo">SnapTools Logo</string>


    <!-- Names for external pack destinations -->
    <string name="nav_ext_general">General</string>
    <string name="nav_ext_misc">Misc Changes</string>
    <string name="nav_ext_saving">Saving</string>
    <string name="nav_ext_debug">Debug Tools</string>
    <string name="nav_ext_unlimited">Unlimited Viewing</string>
    <string name="nav_ext_stealth">Stealth Viewing</string>
    <string name="nav_ext_screenshot">Screenshot Bypass</string>
</resources>
