<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_48dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_pack_manager"
            android:icon="@drawable/ic_pack"
            android:title="@string/menu_packs" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_48dp"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_support_agent_black_48dp"
            android:title="@string/menu_support" />
        <item
            android:id="@+id/nav_faqs"
            android:icon="@drawable/ic_question_answer_black_48dp"
            android:title="@string/menu_faqs" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_group_black_48dp"
            android:title="@string/menu_about_us" />
        <item
            android:id="@+id/nav_shop"
            android:icon="@drawable/ic_payment_black_48dp"
            android:title="@string/menu_shop" />
        <item
            android:id="@+id/nav_features"
            android:icon="@drawable/ic_format_list_bulleted_black_48dp"
            android:title="@string/menu_features" />
        <item
            android:id="@+id/nav_legal"
            android:icon="@drawable/ic_info_outline_black_48dp"
            android:title="@string/menu_legal" />
    </group>
</menu>
