<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:theme="@style/AppTheme">

    <ImageView
        android:id="@+id/home_logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_logo_size"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/sniptools_logo"
        android:contentDescription="@string/cdesc_sniptools_logo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@id/home_logo"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:id="@+id/splitter"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary" />

            <TextView
                android:id="@+id/txt_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/home_description_text_margin_vert"
                android:layout_marginLeft="@dimen/home_description_text_margin_hori"
                android:layout_marginRight="@dimen/home_description_text_margin_hori"
                android:layout_marginTop="@dimen/home_description_text_margin_vert"
                android:gravity="center"
                android:text="@string/home_description"
                android:textSize="@dimen/home_description_text_size" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/txt_authors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:text="@string/home_authors"
            android:textSize="@dimen/home_authors_text_size" />

        <LinearLayout
            android:id="@+id/app_version_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/footer_app_version"
                android:textSize="@dimen/version_text_size" />

            <TextView
                android:id="@+id/txt_app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="@dimen/version_text_size" />
        </LinearLayout>
    </LinearLayout>

    <nl.dionsegijn.konfetti.KonfettiView
        android:id="@+id/viewKonfetti"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="-16dp" />
</RelativeLayout>